Shorten Index header to '順' and prevent table header text wrapping

--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ th {
     user-select: none;
     position: sticky;
     top: 0;
+    white-space: nowrap;
 }
 
 th:hover {
